cleanup a fix programu

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Powershell/MerakiSDK/sdktest.ps1
 Python/Networking/Nornir/yamlizer.py
 nornir.log
 nornir.log
+Python/AppDev/app/db.txt
+Python/AppDev/app/filename.log
